modules/networking/main.tf
#############################################
# VPC
#############################################

resource "aws_vpc" "this" {

  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-vpc"
    }
  )
}

#############################################
# Internet Gateway
#############################################

resource "aws_internet_gateway" "this" {

  vpc_id = aws_vpc.this.id

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-igw"
    }
  )
}

#############################################
# Public Subnets
#############################################

resource "aws_subnet" "public" {

  count = length(var.public_subnet_cidrs)

  vpc_id = aws_vpc.this.id

  cidr_block = var.public_subnet_cidrs[count.index]

  availability_zone = var.availability_zones[count.index]

  map_public_ip_on_launch = true

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-public-${count.index + 1}"
      Tier = "Public"
    }
  )
}

#############################################
# Private Application Subnets
#############################################

resource "aws_subnet" "private_app" {

  count = length(var.private_app_subnet_cidrs)

  vpc_id = aws_vpc.this.id

  cidr_block = var.private_app_subnet_cidrs[count.index]

  availability_zone = var.availability_zones[count.index]

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-private-app-${count.index + 1}"
      Tier = "Application"
    }
  )
}

#############################################
# Private Database Subnets
#############################################

resource "aws_subnet" "private_db" {

  count = length(var.private_db_subnet_cidrs)

  vpc_id = aws_vpc.this.id

  cidr_block = var.private_db_subnet_cidrs[count.index]

  availability_zone = var.availability_zones[count.index]

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-private-db-${count.index + 1}"
      Tier = "Database"
    }
  )
}

#############################################
# Elastic IP
#############################################

resource "aws_eip" "nat" {

  count = var.enable_nat_gateway ? 1 : 0

  domain = "vpc"

  depends_on = [
    aws_internet_gateway.this
  ]

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-nat-eip"
    }
  )
}

#############################################
# NAT Gateway
#############################################

resource "aws_nat_gateway" "this" {

  count = var.enable_nat_gateway ? 1 : 0

  allocation_id = aws_eip.nat[0].id

  subnet_id = aws_subnet.public[0].id

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-nat"
    }
  )
}

#############################################
# Public Route Table
#############################################

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.this.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.this.id

  }

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-public-rt"
    }
  )
}

#############################################
# Private Route Table
#############################################

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.this.id

  dynamic "route" {

    for_each = var.enable_nat_gateway ? [1] : []

    content {

      cidr_block = "0.0.0.0/0"

      nat_gateway_id = aws_nat_gateway.this[0].id

    }

  }

  tags = merge(
    local.tags,
    {
      Name = "${local.name}-private-rt"
    }
  )
}

#############################################
# Public Route Associations
#############################################

resource "aws_route_table_association" "public" {

  count = length(aws_subnet.public)

  subnet_id = aws_subnet.public[count.index].id

  route_table_id = aws_route_table.public.id

}

#############################################
# Private App Associations
#############################################

resource "aws_route_table_association" "private_app" {

  count = length(aws_subnet.private_app)

  subnet_id = aws_subnet.private_app[count.index].id

  route_table_id = aws_route_table.private.id

}

#############################################
# Private DB Associations
#############################################

resource "aws_route_table_association" "private_db" {

  count = length(aws_subnet.private_db)

  subnet_id = aws_subnet.private_db[count.index].id

  route_table_id = aws_route_table.private.id

}
